(In Git)

 === New features
 === Bufixes

 == 0.1.2 2009-4-05

 === New features
 === Bufixes
  * Actually added the renamed generators to the gem so people could use it! D'oh! (Ben Mabey)
    * You can either use "./script generate email_spec" or "rubigen rails email_spec"
  * Removed Rake tasks from example application to prevent conflicts when used as a plugin. (Ben Mabey)

 == 0.1.1 2009-3-26
 === New features
  * Switched dir structure over to support rubigen. (Dr. Nic)

 === Bufixes

 == 0.1.0 2009-3-25
 === New features
  * Change Rakefile to run all specs and features, as well as prepare the db (Mischa Fierer)
  * Allow for array to be passed into deliver_to matcher. (Diego Carrion)
  * Added matcher for checking if a collection of emails includes an email with a particular subject (Luke Melia, Noah Davis)
  * Introduced hook to convert objects to email addresses (Luke Melia and Lee Bankewitz)

    This allows you, in your step matcher, to say something like:
    maillbox_for(some_user)

    Use it in your cucumber env.rb like so:

      EmailSpec::AddressConverter.instance.conversion do |input|
       if input.is_a?(User)
         input.email
       else
         input
       end
      end

=== Bufixes
 * Revert parse_email_for_link helper method to allow for text links as well as explicit link finding. (Mischa Fierer)
 * Isolated variances between using email-spec with an ARMailer project. (Luke Melia)


== 0.0.9 2009-2-15
 === New features
  * have_body_text, have_header matchers (Luke Melia)
  * EmailViewer - opens all sent emails in a given scenario when the environment variables are set. (Luke Melia)
  * Added compatibility with using ARMailer in test mode. (Luke Melia)
 === Bugfixes
  * set_current_email now works with multiple addresses in To field. (Brian McManus, Ben Mabey)

== 0.0.7 2009-1-20
 === New features
  * have_subject matcher (Ben Mabey)

== 0.0.6 2008-12-23
 === New features
  * Improved RSpec documentation and refactorings. (Ben Mabey)