@@ -18,6 +18,4 @@ require File.expand_path(File.dirname(__FILE__) + '../../../../../lib/email_spec
 require 'email_spec/cucumber'
 
 require File.expand_path(File.dirname(__FILE__) +'/../../spec/model_factory.rb')
-World { |world| world.extend(Fixjour) }
-
-
+World(Fixjour)
